--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </script>
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '800661929';
+    const serviceWorkerVersion = "995418431";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
